--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>iCoder - Heaven for programmer</title>
+    <title>VCoder - Heaven for programmer</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">iCoder</a>
+            <a class="navbar-brand" href="#">VCoder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/iCoderBootstrap007/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/VCoderBootstrap007/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoderBootstrap007/about.html">About</a>
+                        <a class="nav-link" href="/VCoderBootstrap007/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoderBootstrap007/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/VCoderBootstrap007/contact.html">Contact Us</a>
                     </li>
 
 
