--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="container my-4">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
-                <h2 class="featurette-heading">It all started with iCoder's idea. <span class="text-muted">It'll blow
+                <h2 class="featurette-heading">It all started with VCoder's idea. <span class="text-muted">It'll blow
                         your
                         mind.</span>
                 </h2>
@@ -80,7 +80,7 @@
 
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading">iCoder started in 1920. <span class="text-muted">It'll blow your
+                <h2 class="featurette-heading">VCoder started in 2020. <span class="text-muted">It'll blow your
                         mind.</span>
                 </h2>
                 <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
@@ -114,7 +114,7 @@
 
     <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>© 2020-2021 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        <p>© 2020-2021 VCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
