--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoderBootstrap007/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/VCoderBootstrap007/contact.html">Contact Us</a>
                     </li>
 
 
@@ -115,7 +115,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Get an iCoder account</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Get an VCoder account</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -163,7 +163,7 @@
             <div class="carousel-item active">
                 <img src="4.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Welcome to iCoder</h2>
+                    <h2>Welcome to VCoder</h2>
                     <p>Technology News, Developement and Trends</p>
                     <button class="btn btn-danger">Technology</button>
                     <button class="btn btn-primary">Web Developement</button>
@@ -183,7 +183,7 @@
             <div class="carousel-item">
                 <img src="6.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Award Winning Blog</h2>
+                    <h2>Oscar Winning Blog</h2>
                     <p>Technology News, Developement and Trends</p>
                     <button class="btn btn-danger">Technology</button>
                     <button class="btn btn-primary">Web Developement</button>
@@ -245,7 +245,7 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Frontend</strong>
+                        <strong class="d-inline-block mb-2 text-success">Developement</strong>
                         <h3 class="mb-0">Bootstrap Templates</h3>
                         <div class="mb-1 text-muted">Nov 12</div>
                         <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
@@ -263,8 +263,8 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Python</strong>
-                        <h3 class="mb-0">Learn Python</h3>
+                        <strong class="d-inline-block mb-2 text-success">ROR</strong>
+                        <h3 class="mb-0">Learn Rails</h3>
                         <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
                             additional content.</p>
@@ -281,7 +281,7 @@
 
     <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>© 2020-2021 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        <p>© 2020-2021 VCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
