--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoderBootstrap007/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/VCoderBootstrap007/contact.html">Contact Us</a>
                     </li>
 
 
@@ -101,7 +101,7 @@
 
     <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>© 2020-2021 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        <p>© 2020-2021 VCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
